--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@
                     <i class="fa-brands fa-instagram"></i>&nbsp;&nbsp;&nbsp;
                     <i class="fa-brands fa-facebook"></i>&nbsp;&nbsp;&nbsp;
                     <i class="fa-brands fa-whatsapp"></i>&nbsp;&nbsp;&nbsp;
-                    <i class="fa-brands fa-threads"></i>
+                    <i class="fa-brands fa-threads"></i><br><br>
+                    Contact at +91 9810676048
                 </span>
             </div>
             <div class="qur-form">
